[package]
name = "eve-rust"
version = "0.1.0"
authors = ["Nikolay Denev <ndenev@gmail.com>"]
build = "build.rs"

[build-dependencies]
serde_codegen = "*"

[dependencies]
crossbeam = "0.2.10"
docopt = "0.6.82"
redis = "*"
serde = "*"
serde_json = "*"
chrono = { version = "0.2", features = ["serde"] }
