[package]
name = "eve-rust"
version = "0.2.0"
authors = ["Nikolay Denev <ndenev@gmail.com>"]
build = "build.rs"

[features]
default = ["serde_codegen"]
# unstable = ["serde_derive"]

[build-dependencies]
serde_codegen = { version = "0.9.0", optional = true }

[dependencies]
serde = "0.9.11"
# serde_derive = { version = "0.9.11", optional = true }
serde_derive = { version = "0.9.11" }
serde_json = "0.9.9"
crossbeam = "*"
docopt = "0.6"
redis = "*"
chrono = { version = "0.3", features = ["serde"] }
